[gd_scene load_steps=6 format=3 uid="uid://cr2qa7fs8dus2"]

[ext_resource type="Script" uid="uid://d2wcmn707h6hd" path="res://editor/controls/dockers/workspace_docker/c_dynamic_context_docker/dynamic_context_controls/edit_virtual_motor_parameters.gd" id="1_rp8hf"]
[ext_resource type="PackedScene" uid="uid://dm1rw27pn4ruw" path="res://editor/controls/dockers/workspace_docker/shared_controls/motor_parameters_editors/rotary_motor_parameters_editor.tscn" id="2_56wcj"]
[ext_resource type="PackedScene" uid="uid://b2b25o2443x3b" path="res://editor/controls/general/info_label.tscn" id="2_amybv"]
[ext_resource type="PackedScene" uid="uid://dgp1lik5qg0mv" path="res://editor/controls/dockers/workspace_docker/shared_controls/motor_parameters_editors/linear_motor_parameters_editor.tscn" id="3_xgfxo"]
[ext_resource type="PackedScene" uid="uid://ctmxf28yulsqb" path="res://editor/controls/dockers/workspace_docker/shared_controls/motor_parameters_editors/motor_cycle_parameters_editor.tscn" id="5_vy7l5"]

[node name="EditVirtualMotorParameters" type="MarginContainer"]
offset_right = 442.0
offset_bottom = 324.0
size_flags_vertical = 3
script = ExtResource("1_rp8hf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SelectOneInfoLabel" parent="VBoxContainer" instance=ExtResource("2_amybv")]
unique_name_in_owner = true
layout_mode = 2
text = "[center][wave start=4 length=14 freq=0.5 sat=0.8 val=0.8 connected=1]â„¹[/wave] Select only one motor at a time to edit it[/center]"
message = &"Select only one motor at a time to edit it"
effect = "wave"

[node name="RotaryMotorParametersEditor" parent="VBoxContainer" instance=ExtResource("2_56wcj")]
unique_name_in_owner = true
layout_mode = 2
show_motor_type = true

[node name="LinearMotorParametersEditor" parent="VBoxContainer" instance=ExtResource("3_xgfxo")]
unique_name_in_owner = true
layout_mode = 2
show_motor_type = true

[node name="MotorCycleParametersEditor" parent="VBoxContainer" instance=ExtResource("5_vy7l5")]
unique_name_in_owner = true
layout_mode = 2
